# thiserror-core2

./: Cargo.toml  README.md
impl/src/: attr.rs  expand.rs  valid.rs
src/: aserror.rs  lib.rs
tests/: test_backtrace.rs  test_error.rs  test_expr.rs  test_from.rs  test_lints.rs  test_option.rs  test_path.rs  test_source.rs  test_transparent.rs
tests/ui/: bad-field-attr.rs  duplicate-enum-source.rs  duplicate-struct-source.rs  from-not-source.rs  lifetime.rs  missing-fmt.rs  unexpected-field-fmt.rs
